src/test/deca/syntax/invalid/lexer/include_tests/include_sQuotes.deca
// Description:
//    utilisation de ' a la place de "
//
// Resultats:
//    Ligne 11 : Erreur lexicale
//
// Historique:
//    cree le 09/01/2023
//

#include 'Math.decah'